Fixed text alignment

--- a/style.css
+++ b/style.css
@@ -104,10 +104,6 @@ h1 {
     margin-bottom: 0;
 }
 
-#text-me p {
-    text-align: justify;
-}
-
 #icons-me {
     margin: 5% 0 5% 0;
     display: grid;
@@ -139,6 +135,7 @@ h1 {
     color: darkred;
     font-size: 18px;
 }
+
 .strong {
     font-weight: bold;
     border-top: 1px black solid;
@@ -159,14 +156,10 @@ h1 {
 
 #projects-grid {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr;
     justify-items: center;
     align-items: center;
     grid-gap: 20px;
-}
-
-#projects-grid #left-text {
-    text-align: justify;
 }
 
 #contact header {
@@ -243,7 +236,7 @@ footer {
     #intro {
         margin: 0 auto;
         width: 100%;
-        text-align: center;
+        text-align: left;
         padding-top: 1em;
         padding-bottom: 1em;
     }
